# txtcel-program

./: .gitignore  Cargo.toml  README.md  SECURITY.md  llms.txt
src/: error.rs  instruction.rs  lib.rs  state.rs
src/content/: body.rs  mod.rs
src/processor/: add_to_blacklist.rs  add_to_fee_whitelist.rs  add_to_whitelist.rs  append_content.rs  close_account.rs  create_root_alloc.rs  fill_slot.rs  init_settings.rs  init_thread_access.rs  like_content.rs  mod.rs  prepare_alloc.rs  remove_from_blacklist.rs  remove_from_fee_whitelist.rs  remove_from_whitelist.rs  request_access.rs  set_admin.rs  set_entry_fee.rs  set_like_fee.rs  set_message_fee.rs  set_platform_fees.rs  set_thread_access.rs  set_treasury.rs  subscribe.rs  sweep_author_fees.rs  sweep_treasury.rs  unsubscribe.rs
src/state/: account_utils.rs  accounts.rs  asserts.rs  constants.rs  fees.rs  loaders.rs  mod.rs  pda.rs
tests/: access.rs  admin.rs  audit.rs  channels.rs  combinations.rs  extras.rs  follow.rs  lifecycle.rs  likes.rs  misc.rs
tests/common/: mod.rs
