[package]
name = "txtcel_program"
version = "0.1.0"
edition = "2021"
description = "Txtcel on-chain Solana program"
license = "MIT"
repository = "https://github.com/txtcel/txtcel-program"

[lib]
name = "txtcel_program"
crate-type = ["cdylib", "lib"]

# `entrypoint!` expands to `cfg(target_os = "solana")`, which rustc's check-cfg
# does not know about on host builds — silence the false positive.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[features]
no-entrypoint = []
custom-heap = []
custom-panic = []

[dependencies]
borsh = { version = "1.6.0", features = ["derive"] }
solana-program = "3.0.0"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
solana-security-txt = "1.1.3"

# Integration tests run the compiled .so inside an in-process SVM (litesvm) and
# reuse this crate's own `ProgramInstruction`/state/PDA helpers, so the tests can
# never drift from the program. litesvm 0.11 pins the Solana 3.x ecosystem, which
# matches `solana-program = 3.0` above.
[dev-dependencies]
litesvm = "0.11"
solana-keypair = "3"
solana-signer = "3"
solana-message = "3"
solana-transaction = "3"
solana-account = "3"
solana-hash = "3"
solana-instruction = "3"
solana-pubkey = "3"
solana-program = "3.0.0"
solana-clock = "3"
borsh = { version = "1.6.0", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
# Defense in depth: most math already uses checked_*/saturating_*, but trap on
# any unguarded overflow rather than silently wrapping.
overflow-checks = true

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
